@@ -34,7 +34,6 @@ import java.util.NoSuchElementException;
 public class ReferenceVertexProperty<V> extends ReferenceElement<VertexProperty<V>> implements VertexProperty<V> {
 
     private ReferenceVertex vertex;
-    private String key;
     private V value;
 
     private ReferenceVertexProperty() {
@@ -44,7 +43,6 @@ public class ReferenceVertexProperty<V> extends ReferenceElement<VertexProperty<
     public ReferenceVertexProperty(final VertexProperty<V> vertexProperty) {
         super(vertexProperty);
         this.vertex = ReferenceFactory.detach(vertexProperty.element());
-        this.key = vertexProperty.key();
         this.value = vertexProperty.value();
     }
 
@@ -55,12 +53,7 @@ public class ReferenceVertexProperty<V> extends ReferenceElement<VertexProperty<
 
     @Override
     public String key() {
-        return this.key;
-    }
-
-    @Override
-    public String label() {
-        return this.key;
+        return this.label();
     }
 
     @Override
